<resources>
    <string name="app_name">FinalProject</string>
    <string name="search">Search</string>
    <string name="poster">Movie Poster</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="add">Add to Watchlist</string>
    <string name="signout">Sign out</string>
    <string name="watchlist">Watchlist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
